--- a/index.html
+++ b/index.html
@@ -1,68 +1,55 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Maribel Mollinedo</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="top-container">
+      <img class="nube-superior"src="images/cloud.png" alt="nube-imagen">
+      <h1>Soy Maribel</h1>
+      <h2>una <span class="pro">pro</span>gramadora</h2>
+      <img class="nube-inferior"src="images/cloud.png" alt="nube-imagen">
+      <img src="images/mountain.png" alt="imagen-montaña">
+    </div>
+    <div class="middle-container">
+      <div class="profile">
+        <img class="mi-foto" src="images\oooo.plus_108.png" alt="Foto">
+        <h2>Hola.</h2>
+        <p class="intro">Bienvenidos a mi página personal donde podrán encontrar información general sobre mi.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>Mis habilidades.</h2>
+        <div class="skill-row">
+          <img class="imagen-1" src="images\visual-studio-online.jpg" alt="imagen-programación">
+          <h3>Programación & Desarrollo</h3>
+          <p>Aún me considero una novata en cuanto a programación y desarrollo de aplicaciones, sin embargo, poco a poco esas habilidades van aumentando.</p>
+        </div>
+        <div class="skill-row">
+          <img class="imagen-2" src="images\EEeoQwiUEAANQuI.jpg" alt="imagen-cosplay">
+          <h3>Costume play making</h3>
+          <p>La elaboración y uso de trajes cosplay ha sido mi afición desde hace varios años, razón por la cual tengo un nivel sobresaliente en tal actividad.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Si desea más información puede contactarme.</h3>
+        <p class="contact-message">Sigánme en mis redes sociales y denle like mi trabajo ❤.</p>
+        <a href="mailto:marinekosensei@gmail.com" class="myButton">CONTÁCTAME</a>
+      </div>
+    </div>
 
-<head>
-  <meta charset="utf-8">
-  <title>Gatubel's personal site 🐱</title>
-</head>
+<div class="bottom-container">
+  <a class="footer-link" href="https://www.linkedin.com/in/maribel-mollinedo-castell%C3%B3n-9800b815b/">LinkedIn</a>
+  <a class="footer-link" href="https://twitter.com/Aria_Lecard">Twitter</a>
+  <a class="footer-link" href="https://www.facebook.com/GatubelMaribel/">Website</a>
+  <p class="copyright">© 2020 Maribel/Gatubel.</p>
+</div>
 
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="images/oooo.plus_108.png" alt="Maribel Profile Picture" height="142" width="142"></td>
-      <td><h1>Maribel Mollinedo</h1>
-      <p><em>Cosplayer, cosmaker, <strong><a href="http://www.fni.uto.edu.bo/fni/index.php">estudiante de ingeniería</a>.</strong></em></p>
-      <p>Estudiante de la Facultad Nacional de Ingeniería en la actualidad,
-      ha logrado hacerse conocer en la escena del cosplay a nivel nacional.</p>
-    </tr>
-  </table cellspacing=10>
-  <hr size="3" noshade></td>
-  <h3>Formación</h3>
-  <ul>
-    <li>Técnico superior analista de sistemas.</li>
-    <li>Profesora de matemáticas.</li>
-    <li>Instructora de <a href="https://es.wikipedia.org/wiki/Zumba">zumba</a>.</li>
-  </ul>
-  <hr>
-  <h3>Experiencia laboral</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Año</th>
-        <th>Trabajo</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2017</td>
-        <td>Encuestadora dentro del evento deportivo “Dakar 2017”.</td>
-      </tr>
-      <tr>
-        <td>2019</td>
-        <td>Realización de pasantias en la Policía Boliviana.</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Habilidades</h3>
-  <table cellspacing=10>
-    <tbody>
-      <tr>
-          <td>Programación</td>
-          <td>🌟</td>
-      </tr>
-      <tr>
-        <td>Desarrollo de software</td>
-        <td>🌟🌟</td>
-      </tr>
-      <tr>
-        <td>Redes</td>
-        <td>🌟</td>
-      </tr>
-    </tbody>
-  </table>
-  <h3><a href="D:\Desarrollo Web\Html - personal site\pasatiempos.html">Pasatiempos</a></h3>
-  <hr size=3 noshade>
-  <h3><a href="D:\Desarrollo Web\Html - personal site\contacto.html">Contacto</a></h3>
-</body>
+  </body>
 </html>
